fixed minor navbar issues on mobile

--- a/checklist-style.css
+++ b/checklist-style.css
@@ -54,13 +54,13 @@
   /* Add a "checked" mark when clicked on */
   #section-3 ul li.checked::before {
     content: '';
-    position: absolute;
+    /* position: absolute; */
     border-color: #fff;
     border-style: solid;
     border-width: 0 2px 2px 0;
     top: 10px;
     left: 16px;
-    transform: rotate(45deg);
+    /* transform: rotate(45deg); */
     height: 15px;
     width: 7px;
   }
