--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     background-color: #24252a;
     position:fixed;
     top:0;
     width:100%;
-    height: 12vh;
+    /* height: 12vh; */
 }
 .logo {
     margin-left: 30%;
